[project]
name = "aula19-bootcamp"
version = "0.1.0"
description = "Exemplo de FastAPI"
authors = [
    {name = "Marcelo Vasselai",email = "mvasselai@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "sqlalchemy (>=2.0.40,<3.0.0)",
    "fastapi (>=0.115.12,<0.116.0)",
    "schema (>=0.7.7,<0.8.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
